fix(bootstrap4-theme): 🐛 re-did button placement on mobile

--- a/packages/bootstrap4-theme/src/scss/extends/_heroes.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_heroes.scss
@@ -95,6 +95,7 @@
   .uds-hero-container {
     // Mobile adjustments.
     @media screen and (max-width: 576px) {
+      margin-bottom: -2rem;
 
       h1 {
         max-width: 100%;
